--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-08-13 13:29+0300\n"
+"POT-Creation-Date: 2020-08-18 18:30+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -103,6 +103,10 @@ msgstr "toimenpideohjelma"
 #: actions/models.py indicators/models.py
 msgid "plans"
 msgstr "toimenpideohjelmat"
+
+#: actions/models.py
+msgid "Primary language must not be selected"
+msgstr ""
 
 #: actions/models.py
 msgid "official name"
@@ -222,6 +226,14 @@ msgid "person"
 msgstr "henkilö"
 
 #: actions/models.py
+msgid "primary contact person"
+msgstr "ensisijainen yhteyshenkilö"
+
+#: actions/models.py
+msgid "Is this person the primary contact person for the action?"
+msgstr "Onko tämä henkilö toimenpiteen ensisijainen yhteyshenkilö?"
+
+#: actions/models.py
 msgid "action contact person"
 msgstr "toimenpiteen yhteyshenkilö"
 
@@ -329,6 +341,14 @@ msgstr "toimenpiteen vaikuttavuusluokka"
 #: actions/models.py
 msgid "action impact classes"
 msgstr "toimenpiteen vaikuttavuusluokat"
+
+#: actions/models.py
+msgid "usable for action categorization"
+msgstr "käytetään toimenpiteiden luokitukseen"
+
+#: actions/models.py
+msgid "usable for indicator categorization"
+msgstr "käytetään mittareiden luokitukseen"
 
 #: actions/models.py
 msgid "editable for actions"
@@ -1148,6 +1168,66 @@ msgstr "sisältölohko"
 msgid "content blocks"
 msgstr "sisältölohkot"
 
+#: pages/blocks.py
+msgid "Title"
+msgstr "Otsikko"
+
+#: pages/blocks.py
+msgid "Question"
+msgstr "Kysymys"
+
+#: pages/blocks.py
+msgid "Answer"
+msgstr "Vastaus"
+
+#: pages/blocks.py
+msgid "Questions"
+msgstr "Kysymykset"
+
+#: pages/blocks.py
+msgid "Big image"
+msgstr "Iso kuva"
+
+#: pages/blocks.py
+msgid "Small image"
+msgstr "Pieni kuva"
+
+#: pages/blocks.py pages/models.py
+msgid "Heading"
+msgstr "Otsikko"
+
+#: pages/blocks.py
+msgid "Lead"
+msgstr "Johdanto"
+
+#: pages/models.py
+msgid "Common page configuration"
+msgstr "Yleiset sivuasetukset"
+
+#: pages/models.py
+msgid "Header image"
+msgstr "Pääkuva"
+
+#: pages/models.py
+msgid "Image to use in the header for this page"
+msgstr "Kuva jota käytetään sivun yläosassa"
+
+#: pages/models.py
+msgid "Lead paragraph"
+msgstr "Ingressi"
+
+#: pages/models.py
+msgid "Lead paragraph right under the heading"
+msgstr "Johdantokappale otsikon alapuolella"
+
+#: pages/models.py
+msgid "Paragraph"
+msgstr "Kappale"
+
+#: pages/models.py
+msgid "Questions & Answers"
+msgstr "Kysymykset & vastaukset"
+
 #: people/admin.py
 msgid "Is contact person"
 msgstr "On yhteyshenkilö"
@@ -1159,6 +1239,10 @@ msgstr "yhteyshenkilönä toimenpiteille"
 #: people/apps.py people/wagtail_admin.py
 msgid "People"
 msgstr "Henkilöt"
+
+#: people/chooser.py
+msgid "Create new"
+msgstr "Luo uusi"
 
 #: people/chooser.py
 msgid "Choose person"
