--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-02 11:56+0300\n"
+"POT-Creation-Date: 2020-09-02 14:47+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1418,6 +1418,10 @@ msgstr "Tällä sähköpostiosoitteella on jo henkilö"
 #: people/templates/people/chooser_results.html
 msgid "Organization"
 msgstr "Organisaatio"
+
+#: people/wagtail_admin.py
+msgid "Input organization name"
+msgstr "Syötä organisaation nimi"
 
 #: templates/aplans_admin/index.html
 msgid "Select action plan"
