Implement filtering based on being an action or indicator contact person

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-25 14:04+0300\n"
+"POT-Creation-Date: 2020-09-25 14:28+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -869,11 +869,11 @@ msgstr "taso"
 msgid "Disconnected indicators"
 msgstr "irralliset mittarit"
 
-#: indicators/admin.py people/admin.py
+#: indicators/admin.py
 msgid "No"
 msgstr "Ei"
 
-#: indicators/admin.py people/admin.py
+#: indicators/admin.py
 msgid "Yes"
 msgstr "Kyllä"
 
@@ -1389,6 +1389,18 @@ msgid "Is contact person"
 msgstr "On yhteyshenkilö"
 
 #: people/admin.py
+msgid "For an action"
+msgstr "Toimenpiteelle"
+
+#: people/admin.py
+msgid "For an indicator"
+msgstr "Mittarille"
+
+#: people/admin.py
+msgid "Not a contact person"
+msgstr "Ei ole yhteyshenkilö"
+
+#: people/admin.py people/wagtail_admin.py
 msgid "contact for actions"
 msgstr "yhteyshenkilönä toimenpiteille"
 
@@ -1472,6 +1484,10 @@ msgstr "Organisaatio"
 #: people/wagtail_admin.py
 msgid "has logged in"
 msgstr "on kirjautunut sisään"
+
+#: people/wagtail_admin.py
+msgid "contact for indicators"
+msgstr "yhteyshenkilönä mittareille"
 
 #: templates/aplans_admin/index.html
 msgid "Select action plan"
