--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-22 15:15+0200\n"
+"POT-Creation-Date: 2021-02-22 19:45+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -255,8 +255,8 @@ msgid "Set if you want to prevent the action status from being determined automa
 msgstr "Aseta jos haluat estää toimenpiteen tilan automaattisen päivityksen"
 
 #: actions/models.py
-msgid "reason for status"
-msgstr "syy toimenpiteen tilalle"
+msgid "specifier for status"
+msgstr "tilan tarkenne"
 
 #: actions/models.py
 msgid "Describe the reason why this action has has this status"
